# TacticalAI

./: .gitignore  CLAUDE.md  LICENSE  compress_tools..py  pyproject.toml  run.bat  sv_to_txt.py
.github/workflows/: ci.yml
TacticalAI-revert-2-claude-setup-trpg-gm-prompt-PyBcl/: ai_compressor..py
TacticalAI-revert-2-claude-setup-trpg-gm-prompt-PyBcl/configs/: characters.json  enemy_pieces.json.example  map_commands.json  prompts.json
TacticalAI-revert-2-claude-setup-trpg-gm-prompt-PyBcl/core/: char_maker.py  gui_tool.py  main.py
TacticalAI-revert-2-claude-setup-trpg-gm-prompt-PyBcl/tests/: conftest.py  test_character_manager.py
configs/: board_state.json  world_setting.json  world_setting_compressed.txt
configs/saved_pcs/: temp_ai.json
core/: ccfolia_connector.py  ccfolia_map_controller.py  char_maker.py  character_manager.py  gui_tool.py  knowledge_manager.py  launcher.py  lm_client.py  main.py  session_manager.py
core/vtt_adapters/: __init__.py  base_adapter.py  ccfolia_adapter.py
tests/: conftest.py  test_ccfolia_map_controller.py  test_character_manager.py  test_knowledge_manager.py  test_lm_client.py  test_prompt_manager.py  test_session_manager.py  test_vtt_adapters.py
