[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["core*"]

[project]
name = "tactical-exorcist-trpg-ai"
version = "0.1.0"
description = "タクティカル祓魔師 TRPG AI — ローカル LLM を使った TRPG ゲームマスター支援システム"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31",
    "selenium>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

# ──────────────────────────────────────────
# pytest
# ──────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-v",
    "--tb=short",
    "--cov=core",
    "--cov-report=term-missing",
    "--cov-report=xml:coverage.xml",
]
# tkinter / Selenium が絡む GUI テストはスキップ
markers = [
    "gui: marks tests that require tkinter (deselect with '-m not gui')",
    "integration: marks tests that require a live LM Studio server",
]

# ──────────────────────────────────────────
# ruff (Lint + Format)
# ──────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["core", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (formatter handles this)
    "B008",  # do not perform function calls in default arguments
]

[tool.ruff.lint.isort]
known-first-party = ["core"]

# ──────────────────────────────────────────
# mypy
# ──────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_return_any = true
warn_unused_ignores = true
